Fix gx-table cells horizontal and vertical align (#32)

--- a/src/components/table-cell/table-cell.scss
+++ b/src/components/table-cell/table-cell.scss
@@ -2,4 +2,6 @@
 
 gx-table-cell {
   @include containerCell();
+
+  flex-direction: column;
 }
